# cap-argos

./: .eslintrc.json  .gitignore  electronServe.js  environment.yml  main.js  next.config.mjs  package-lock.json  package.json  preload.js  tsconfig.json  webpack.config.cjs
scripts/: build-python.js
src/app/: layout.tsx  page.tsx
src/app/api/initialize/: route.ts
src/app/api/motion_trace/: route.ts
src/app/api/poses/: route.ts
src/app/api/scenes/: route.ts
src/app/api/videos/: route.ts
src/components/: Layout.tsx  Trajectory.tsx
src/engine/: AnalysisDB.py  PoseDetector.py  core.py  pyproject.toml
src/hooks/: calculateAngle.ts  useVideos.ts
src/lib/: database.js
src/pages/: _app.tsx  index.tsx  layout.tsx
src/pages/scene/[scene_id]/: index.tsx
src/pages/video/[video_id]/: index.tsx
src/utils/: database.js  database.ts
