[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">3.9,<3.14"
opencv-python = "^4.10.0.84"
pyinstaller = "^6.11.1"
ultralytics = "^8.3.61"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
